# mlflow-demo

./: .gitignore  Dockerfile  MLFlow_notebook.ipynb  README.md  cfg.py  docker-compose.yml  metrics.py  plotter.py  pyproject.toml  start_mlflow_server.sh  start_mlflow_ui.sh  train.py
pg-init-scripts/: create-multiple-postgresql-databases.sh
