[tool.poetry]
name = "wine"
version = "0.1.0"
description = ""
authors = ["Foo bar <foo@bar.ai>"]

[tool.poetry.dependencies]
python = "^3.8.5"
numpy = "^1.19.4"
scikit-learn = "^1.1.3"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
urllib3 = "1.26.12"
mlflow = "^2.0.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
jupyter = "^1.0.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
